--- a/src/covid-tracker/App.module.css
+++ b/src/covid-tracker/App.module.css
@@ -14,6 +14,11 @@ body {
   margin-top: 50px;
 }
 
+.backbtn {
+  position: static;
+  margin-top: 20px;
+}
+
 @media (max-width: 770px) {
   .container {
     margin: 0 10%;
